--- a/testWebsocket.html
+++ b/testWebsocket.html
@@ -5,14 +5,14 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.4/socket.io.min.js"></script>
 
 <script type="text/javascript" charset="utf-8">
-  const socket = io.connect('http://192.168.1.4:5000')
+  const socket = io.connect('http://192.168.137.1:5000')
   socket.on('connect', () => {
     socket.send('connected')
   })
   socket.on('message', (msg) => console.log(msg))
 
   const test = () => {
-    socket.send('test')
+    socket.emit('message', 'test')
   }
 </script>
 
